Some minor fixes. [Not finished]
conducted a stress test yesterday (with Ívan), some of aren't really working or don't look as good as we thought.

--- a/Front-End-Development/home/src/components/Header/headerRoom.css
+++ b/Front-End-Development/home/src/components/Header/headerRoom.css
@@ -1,6 +1,12 @@
+
+
+* {
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
 #logout-header {
-    position: fixed;
-    right: 0;
     font-size: 24px;
 }
 
@@ -9,17 +15,11 @@
     transition: all 1s;
 }
 
-* {
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
 .Bar-Header {
     background-color: blueviolet;
     padding: 10px;
     width: 100%;
-    font-size: xx-large;
+    font-size: 24px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -38,8 +38,9 @@
 
 .Bar-Header #logout-header {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    flex-direction: row;
     top: 1cm;
 }
 
