--- a/Front-End-Development/home/src/components/Home/home.css
+++ b/Front-End-Development/home/src/components/Home/home.css
@@ -38,7 +38,7 @@
     color: white;
     flex-direction: row;
     flex: 1;
-    background-color: #8700FF;
+    background-color: #5E00B1;
     padding: 25px;
     text-align: center;
     justify-content: center;
@@ -48,12 +48,13 @@
     border-radius: 1cm;
     font-size: 24px;
     margin-top: 80px;
+    transition: all 0.5s;
 }
 
 #signup:hover {
     box-shadow: 5px 5px 5px rgb(0, 0, 0);
     transition: 1s;
-    background-color: #5E00B1;
+    background-color: #8700FF;
     border: black solid 1px;
 }
 
