--- a/Front-End-Development/home/src/components/Message/Pages/Room/room.css
+++ b/Front-End-Development/home/src/components/Message/Pages/Room/room.css
@@ -10,18 +10,22 @@
 
 .container {
     background-image: url("../../../../assets/starrysky.jpg");
-    height: 100vh;
+    min-height: 100vh; /* I cannot find another way to make the content stay in this background image other than these two. */
+    max-height: 100%; /* I cannot find another way to make the content stay in this background image other than these two. */
+    background-repeat: repeat;
     background-position: center;
+    z-index: -1;
+    object-fit: cover;
 }
 
-.textbox {
-    position: fixed !important;
-    bottom: 0;
-    left: 40%;
-    right: auto;
+.form-textbox {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 90%;
+    flex-wrap: wrap;
+    flex: 1;
+    flex-flow: column;
 }
 
 #message-form {
@@ -57,12 +61,18 @@
 /* This will select the messages indivdually. Do not fuck this one up */
 
 .profile {
-    margin-bottom: 10px;
     background-color: #DAF66E;
     border-radius: 5px;
     border: 3px black solid;
     width: 100vw;
+    height: 120px;
     text-align: center;
+    flex-wrap: wrap;
+    text-wrap: normal;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
 }
 
 .profile #username-span {
@@ -82,6 +92,7 @@
     margin-left: auto;
     margin-right: auto;
     color: black;
+    flex-wrap: wrap;
 }
 
 .profile .message-footer {
@@ -97,8 +108,8 @@
     padding: initial;
     background-color: inherit;
     border: none;
-    position: fixed;
-    right: 1cm;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .delete:hover {
